# ui/openapi.json
@@ -28,6 +28,17 @@
             "title": "Clip",
             "type": "string"
           },
+          "duration_s": {
+            "anyOf": [
+              {
+                "type": "number"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Duration S"
+          },
           "fingerprint": {
             "anyOf": [
               {
@@ -47,6 +58,17 @@
             "title": "Size Bytes",
             "type": "integer"
           },
+          "title": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Title"
+          },
           "variant": {
             "title": "Variant",
             "type": "string"
@@ -57,7 +79,9 @@
           "variant",
           "size_bytes",
           "has_render_json",
-          "fingerprint"
+          "fingerprint",
+          "duration_s",
+          "title"
         ],
         "title": "ClipItem",
         "type": "object"
@@ -320,6 +344,62 @@
           }
         },
         "summary": "Clips"
+      }
+    },
+    "/api/thumb/{stem}/{clip}": {
+      "get": {
+        "operationId": "thumb_api_thumb__stem___clip__get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "stem",
+            "required": true,
+            "schema": {
+              "title": "Stem",
+              "type": "string"
+            }
+          },
+          {
+            "in": "path",
+            "name": "clip",
+            "required": true,
+            "schema": {
+              "title": "Clip",
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "variant",
+            "required": false,
+            "schema": {
+              "default": "",
+              "title": "Variant",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Thumb"
       }
     }
   }
